fixed overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,9 +43,9 @@ body {
 
 .body_wrapper {
     background-color: var(--background_color);
-    // z-index: -2;
     position: relative;
     color: var(--font_color_main);
+    overflow-x: hidden;
 }
 
 .toggle:checked ~ .body_wrapper {
@@ -585,6 +585,7 @@ body {
   font-size: 20px;
   line-height: 100%;
   letter-spacing: 0.08em;
+  color: $font_color_main;
 }
 
 .video {
@@ -811,6 +812,7 @@ body {
 
   &_label {
     @extend .italic;
+    color: var(--btn_color);
     font-size: 18px;
     position: absolute;
     bottom: 12px;
